--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 			<p class="ImgCaption"> Great Homemade Crunchy Roasted Potatoes</p>
 		</div>
 
-		<p> The best crispy roast potatoes ever perfect for a good night snack !! </p>
+		<p> These are the most flavorful crispy roast potatoes you'll ever make,
+			and they just happen to be gluten-free and vegan (if you use oil) to boot.
+			And don't worry, it takes less than 30 minutes to make! </p>
 		<h3> Ingredients </h3>
 		<ul>
 			<li>Salt</li>
